# solrcloudpy

./: .gitignore  .travis.yml  Pipfile  mypy.ini  pyproject.toml  solr880.py
.github/workflows/: poetry-publish.yml
solrcloudpy/: __init__.py  connection.py  utils.py
solrcloudpy/collection/: admin.py  indexer.py  schema.py  search.py
solrcloudpy/collection/data/abstracts/: abstract_document_update_model.py
solrcloudpy/collection/data/dtos/: dto_utlils.py  solr_schema_add_field_dto.py  solr_schema_delete_field_dto.py  solr_schema_fields_info_dto.py
solrcloudpy/collection/data/enums/: solr_field_type.py
solrcloudpy/collection/data/models/: field_model_dto.py  field_type_model_dto.py
test/: run  solr_instance.py  test_collection.py  test_connection.py  test_search.py
